--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
+# local env files (DO NOT COMMIT SECRETS)
+.env
+.env.local
+.env.*.local
 .env*.local
 
 # vercel
