--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sparticuz/chromium": "^133.0.0",
     "@supabase/supabase-js": "^2.78.0",
     "next": "14.2.35",
     "openai": "^6.10.0",
     "playwright": "^1.57.0",
+    "puppeteer": "^24.33.1",
+    "puppeteer-core": "^24.33.1",
     "react": "^18",
     "react-dom": "^18"
   },
