--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "devDependencies": {
     "@types/node": "25.0.1",
     "@types/react": "19.2.7",
+    "@typescript-eslint/eslint-plugin": "^8.50.0",
+    "@typescript-eslint/parser": "^8.50.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.35",
     "postcss": "^8",
