--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "playwright": "^1.57.0",
     "puppeteer-core": "^24.34.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "stripe": "^20.1.0"
   },
   "devDependencies": {
     "@types/node": "25.0.1",
