--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "thumbs": "node scripts/generate-thumbs.mjs"
   },
   "dependencies": {
     "@sparticuz/chromium": "^133.0.0",
     "@supabase/supabase-js": "^2.78.0",
     "next": "14.2.35",
     "openai": "^6.10.0",
-    "playwright": "^1.57.0",
     "puppeteer-core": "^24.34.0",
     "react": "^18",
     "react-dom": "^18",
@@ -26,8 +26,8 @@
     "@typescript-eslint/parser": "^8.50.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.35",
+    "playwright": "^1.57.0",
     "postcss": "^8",
-    "puppeteer": "^24.34.0",
     "tailwindcss": "^3.4.1"
   }
 }
